@@ -1,0 +1,4 @@
+.bundle
+.rvmrc
+*.gem
+rdoc
